Added Menu module thing

--- a/dizionari/04_rubrica/dist-newstyle/packagedb/ghc-9.4.8/x04-rubrica-0.1.0.0-inplace.conf
+++ b/dizionari/04_rubrica/dist-newstyle/packagedb/ghc-9.4.8/x04-rubrica-0.1.0.0-inplace.conf
@@ -8,7 +8,7 @@ maintainer:           140543954+serdookr@users.noreply.github.com
 author:               ser
 abi:                  inplace
 exposed:              True
-exposed-modules:      ContactsLib
+exposed-modules:      ContactsLib Menu
 import-dirs:
     /Users/sera/dev/python-homework/dizionari/04_rubrica/dist-newstyle/build/aarch64-osx/ghc-9.4.8/x04-rubrica-0.1.0.0/build
 
