--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ project.lock.json
 *.pyc
 nupkg/
 
+
 # Visual Studio Code
 .vscode/
 
@@ -41,3 +42,5 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
+
+**/venv_thing
